# MARS

./: .env.example  .gitignore  MARS.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: technical-guide.md  technical-guide_en.md  user-guide.md  user-guide_en.md
mars/: __init__.py  cli.py  scheduler.py
mars/agents/: analyzer.py  connector.py  evaluator.py  researcher.py  searcher.py  summarizer.py
mars/api/: __init__.py  main.py
mars/config/: __init__.py  settings.py
mars/crews/: analysis_crew.py  connection_crew.py  full_research_crew.py  search_crew.py
mars/data/: ccf_2025.json
mars/database/: __init__.py  models.py
mars/evaluation/: __init__.py  benchmark_runner.py  full_eval.py  hallucination_checker.py  llm_judge.py  metrics.py  surge_adapter.py  surge_eval.py  surge_metrics.py
mars/services/: llm_gateway.py
mars/tasks/: __init__.py  task_definitions.py
mars/tasks/prompts/: connection_analysis_task.txt  deep_analysis_task.txt  domain_analysis_task.txt  english_review_task.txt  full_research_synthesis_task.txt  outline_generation_task.txt  paper_search_task.txt  quality_evaluation_task.txt  refinement_task.txt  review_generation_task.txt
mars/tools/: arxiv_api.py  ccf_database.py  citation_network.py  dblp_search.py  file_manager.py  keyword_expander.py  pdf_parser.py  semantic_scholar.py  surge_corpus_tool.py  vectordb_tool.py
mars/utils/: cost_tracker.py  latex_converter.py  llm_factory.py  logging_config.py  retry.py
tests/: conftest.py  test_basic.py  test_evaluation.py  test_gateway_and_crews.py  test_new_components.py  test_usage_features.py
