[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars"
version = "0.1.0"
description = "Multi-Agent Research System - 自动论文搜索与深度解析系统"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["multi-agent", "research", "LLM", "academic", "paper-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Multi-agent framework
    "crewai>=0.80.0",
    "crewai-tools>=0.17.0",
    # LangChain integrations
    "langchain-openai>=0.2.0",
    # LLM SDKs
    "dashscope>=1.20.0",         # Qwen (Alibaba Cloud)
    "openai>=1.50.0",            # DeepSeek & Kimi use OpenAI-compatible API
    "zhipuai>=2.1.0",            # GLM (Zhipu AI)
    # Academic search
    "semanticscholar>=0.8.0",    # Semantic Scholar
    "scholarly>=1.7.11",         # Google Scholar (unofficial)
    # PDF processing
    "PyPDF2>=3.0.0",
    "pymupdf>=1.23.0",           # fitz - faster PDF parser
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",       # KMeans, cosine similarity
    # Vector database
    "chromadb>=0.5.0",
    # Network analysis
    "networkx>=3.2",
    "pyvis>=0.3.2",
    # HTTP / requests
    "httpx>=0.27.0",
    "requests>=2.31.0",
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    # Database
    "sqlalchemy>=2.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0", # Typed settings from env
    "rich>=13.7.0",              # Beautiful CLI output
    "typer>=0.12.0",             # CLI framework
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
mars = "mars.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mars*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
